--- a/index.html
+++ b/index.html
@@ -48,11 +48,111 @@
         >
           <h1>SKILLS</h1>
         </div>
+        <div class="skills-container">
+          <div
+            class="first-skills"
+            data-aos="flip-left"
+            data-aos-delay="1000"
+            data-aos-duration="3000"
+          >
+            <div class="single-skill">
+              <i class="fab fa-js" id="icon"></i>
+              <p>JavaScript</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-react" id="icon"></i>
+              <p>React JS</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-css3-alt" id="icon"></i>
+              <p>CSS</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-html5" id="icon"></i>
+              <p>HTML</p>
+            </div>
+          </div>
+          <div
+            class="second-skills"
+            data-aos="flip-left"
+            data-aos-delay="1500"
+            data-aos-duration="3000"
+          >
+            <div class="single-skill">
+              <i class="fab fa-node-js" id="icon"></i>
+              <p>Node.js</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-python" id="icon"></i>
+              <p>Python</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-github" id="icon"></i>
+              <p>GitHub</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-git-alt" id="icon"></i>
+              <p>git</p>
+            </div>
+          </div>
+          <div
+            class="third-skills"
+            data-aos="flip-right"
+            data-aos-delay="2000"
+            data-aos-duration="3000"
+          >
+            <div class="single-skill">
+              <img
+                src="https://img.icons8.com/ios-filled/150/000000/django.png"
+                width="60"
+                height="60"
+              />
+              <p>Django</p>
+            </div>
+            <div class="single-skill">
+              <img src="/images/pngegg.png" width="60" height="60" />
+              <p>MongoDB</p>
+            </div>
+            <div class="single-skill">
+              <img
+                src="/images/4691328_postgresql_icon.png"
+                width="60"
+                height="60"
+              />
+              <p>PostgreSQL</p>
+            </div>
+            <div class="single-skill">
+              <img
+                src="/images/7417366_vs code_visual studio code_logo_code_icon.png"
+                width="60"
+                height="60"
+              />
+              <p>VScode</p>
+            </div>
+          </div>
+          <div
+            class="fourth-skills"
+            data-aos="flip-right"
+            data-aos-delay="2500"
+            data-aos-duration="3000"
+          >
+            <div class="single-skill">
+              <img src="/images/4691373_sass_icon.png" width="60" height="60" />
+              <p>SASS</p>
+            </div>
+            <div class="single-skill">
+              <img src="/images/express.png" width="60" height="60" />
+              <p>Express.js</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        once: true,
+      });
     </script>
   </body>
 </html>
