--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
       <nav>
         <ul>
-          <li>SKILLS</li>
-          <li>PROJECTS</li>
+          <a href="#skills-section"><li>SKILLS</li></a>
+          <a href="#projects-section"><li>PROJECTS</li></a>
           <li>EXPERIENCE</li>
           <li>ABOUT</li>
           <li>CONTACT</li>
@@ -65,6 +65,12 @@
           data-aos-duration="3000"
         >
           <h1>Skills</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptatibus quos dolore, dicta ad vel eligendi illum. Nostrum
+            veniam inventore, provident praesentium voluptates dolores quod
+            minima sequi, rerum quis quo natus?
+          </p>
         </div>
         <div class="skills-container">
           <div class="first-skills">
@@ -72,38 +78,6 @@
               <i class="fab fa-js" id="icon"></i>
               <p>JavaScript</p>
             </div>
-            <div class="single-skill">
-              <i class="fab fa-react" id="icon"></i>
-              <p>React JS</p>
-            </div>
-            <div class="single-skill">
-              <i class="fab fa-css3-alt" id="icon"></i>
-              <p>CSS</p>
-            </div>
-            <div class="single-skill">
-              <i class="fab fa-html5" id="icon"></i>
-              <p>HTML</p>
-            </div>
-          </div>
-          <div class="second-skills">
-            <div class="single-skill">
-              <i class="fab fa-node-js" id="icon"></i>
-              <p>Node.js</p>
-            </div>
-            <div class="single-skill">
-              <i class="fab fa-python" id="icon"></i>
-              <p>Python</p>
-            </div>
-            <div class="single-skill">
-              <i class="fab fa-github" id="icon"></i>
-              <p>GitHub</p>
-            </div>
-            <div class="single-skill">
-              <i class="fab fa-git-alt" id="icon"></i>
-              <p>git</p>
-            </div>
-          </div>
-          <div class="third-skills">
             <div class="single-skill">
               <img
                 src="https://img.icons8.com/ios-filled/150/000000/django.png"
@@ -113,8 +87,8 @@
               <p>Django</p>
             </div>
             <div class="single-skill">
-              <img src="/images/pngegg.png" width="60" height="60" />
-              <p>MongoDB</p>
+              <i class="fab fa-css3-alt" id="icon"></i>
+              <p>CSS</p>
             </div>
             <div class="single-skill">
               <img
@@ -123,6 +97,38 @@
                 height="60"
               />
               <p>PostgreSQL</p>
+            </div>
+          </div>
+          <div class="second-skills">
+            <div class="single-skill">
+              <i class="fab fa-node-js" id="icon"></i>
+              <p>Node.js</p>
+            </div>
+            <div class="single-skill">
+              <img src="/images/4691373_sass_icon.png" width="60" height="60" />
+              <p>SASS</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-github" id="icon"></i>
+              <p>GitHub</p>
+            </div>
+            <div class="single-skill">
+              <img src="/images/express.png" width="60" height="60" />
+              <p>Express.js</p>
+            </div>
+          </div>
+          <div class="third-skills">
+            <div class="single-skill">
+              <i class="fab fa-react" id="icon"></i>
+              <p>React JS</p>
+            </div>
+            <div class="single-skill">
+              <img src="/images/pngegg.png" width="60" height="60" />
+              <p>MongoDB</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-html5" id="icon"></i>
+              <p>HTML</p>
             </div>
             <div class="single-skill">
               <img
@@ -135,19 +141,25 @@
           </div>
           <div class="fourth-skills">
             <div class="single-skill">
-              <img src="/images/4691373_sass_icon.png" width="60" height="60" />
-              <p>SASS</p>
+              <i class="fab fa-python" id="icon"></i>
+              <p>Python</p>
             </div>
             <div class="single-skill">
-              <img src="/images/express.png" width="60" height="60" />
-              <p>Express.js</p>
+              <i class="fab fa-git-alt" id="icon"></i>
+              <p>git</p>
             </div>
           </div>
         </div>
+        <div class="pink-background"></div>
       </section>
       <section id="projects-section">
+        <div class="yellow-box"></div>
         <div class="projects-title">
           <h1>Projects</h1>
+          <p>
+            I created four projects during General Assembly's Software
+            Engineering Immersive Course. These are listed below.
+          </p>
         </div>
         <div class="projects-container">
           <div class="first-project">
@@ -245,6 +257,75 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="experience-section">
+        <div class="experience-title">
+          <h2>Experience</h2>
+        </div>
+        <div class="experience-cont">
+          <div class="first-experience">
+            <h4>General Assembly</h4>
+            <p>Software Engineering Immersive Course</p>
+            <p>September - December 2021</p>
+            <ul>
+              <li>
+                This was a three month software engineering course learning the
+                key skills required to become a full-stack developer. It
+                consisted of daily lectures, standups, coding labs, pair-coding,
+                homework and four projects listed above.
+              </li>
+              <li>
+                Learnt the fundamental technologies required to become a
+                full-stack software engineer: JavaScript, HTML, CSS, SASS,
+                MongoDB, PostgreSQL, Django, Python and React.
+              </li>
+            </ul>
+          </div>
+          <div class="second-experience">
+            <h4>Brora</h4>
+            <p>Sales Assistant</p>
+            <p>September 2017 - 2019</p>
+            <ul>
+              <li>Involvement in stock management and control.</li>
+              <li>
+                Helping to manage and resolve customer complaints and queries.
+              </li>
+              <li>
+                Key skills gained are an improved understanding of sales, as
+                well as excellent customer service skills.
+              </li>
+            </ul>
+          </div>
+          <div class="third-experience">
+            <h4>Tattersalls Horse Sales</h4>
+            <p>Assistant</p>
+            <p>April - December 2017</p>
+            <ul>
+              <li>Assisting the auctioneer on sales days.</li>
+              <li>Liaising with veterinary personnel during sales.</li>
+              <li>
+                Key skills gained were a greater understanding of the horse
+                racing industry and improved time management skills.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="education-title">
+          <h3>Education</h3>
+        </div>
+        <div>
+          <p>
+            <strong>General Assembly:</strong> Software Engineering Immersive
+            Course, Sept-Dec 2021
+          </p>
+          <p>
+            <strong>Newcastle University:</strong> 2:1 BA (Hons) Politics
+            2018-2021
+          </p>
+          <p>
+            <strong>Code First Girls:</strong> Coding Kick-Starter Course, 2020
+          </p>
         </div>
       </section>
     </main>
