--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       src="https://kit.fontawesome.com/3fdae015a3.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="main.css" />
     <title>Rose Dunlop</title>
   </head>
@@ -18,9 +24,9 @@
         <ul>
           <a href="#skills-section"><li>SKILLS</li></a>
           <a href="#projects-section"><li>PROJECTS</li></a>
-          <li>EXPERIENCE</li>
-          <li>ABOUT</li>
-          <li>CONTACT</li>
+          <a href="#experience-section"><li>EXPERIENCE</li></a>
+          <a href="#about-section"><li>ABOUT</li></a>
+          <a href="#contact-section"><li>CONTACT</li></a>
         </ul>
       </nav>
     </header>
@@ -32,27 +38,27 @@
               <p class="name">Rose Dunlop</p>
               <p class="job">Junior Software Engineer</p>
             </div>
+            <div class="red-shape"></div>
           </div>
           <div class="social">
             <div class="social-icons">
-              <i class="fab fa-github"></i>
-              <i class="fab fa-linkedin"></i>
-              <i class="fas fa-at"></i>
+              <a href="https://github.com/rosedunlop"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/rose-dunlop/"><i class="fab fa-linkedin"></i></a>
+              <a href="#contact-section"><i class="fas fa-at"></i></a>
             </div>
             <div class="social-links">
-              <a>GitHub</a>
-              <a>LinkedIn</a>
-              <a>Contact</a>
+              <a href="https://github.com/rosedunlop">GitHub</a>
+              <a href="https://www.linkedin.com/in/rose-dunlop/">LinkedIn</a>
+              <a href="#contact-section">Contact</a>
             </div>
           </div>
+          <div class="blue-background"></div>
         </div>
-        <div class="blue-background"></div>
-        <div class="red-shape"></div>
         <div
           class="scrolling-container"
           data-aos="fade-down"
           data-aos-duration="3000"
-          data-aos-delay="8000"
+          data-aos-delay="5000"
         >
           <p>Scroll Down</p>
           <i class="fas fa-chevron-down"></i>
@@ -66,13 +72,15 @@
         >
           <h1>Skills</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptatibus quos dolore, dicta ad vel eligendi illum. Nostrum
-            veniam inventore, provident praesentium voluptates dolores quod
-            minima sequi, rerum quis quo natus?
+            During my Software Engineering Immersive Course at General Assembly
+            I learnt numerous skills both in front-end and back-end development.
+            Learning these technologies have provided me with Full-Stack skills
+            which are listed here.
           </p>
         </div>
-        <div class="skills-container">
+        <div class="skills-container class="skills-title"
+        data-aos="fade-left"
+        data-aos-duration="3000"">
           <div class="first-skills">
             <div class="single-skill">
               <i class="fab fa-js" id="icon"></i>
@@ -153,8 +161,11 @@
         <div class="pink-background"></div>
       </section>
       <section id="projects-section">
-        <div class="yellow-box"></div>
-        <div class="projects-title">
+        <div class="yellow-box" data-aos="fade-up"
+        data-aos-duration="3000"></div>
+        <div class="projects-title" 
+        data-aos="fade-up"
+        data-aos-duration="3000">
           <h1>Projects</h1>
           <p>
             I created four projects during General Assembly's Software
@@ -163,17 +174,22 @@
         </div>
         <div class="projects-container">
           <div class="first-project">
-            <div class="first-image">
+            <div class="first-image" data-aos="flip-up"
+            data-aos-duration="3000">
               <img src="./images/eclectic.png" alt="image" />
             </div>
-            <div class="small-img-cont">
+            <div class="small-img-cont" data-aos="fade-down"
+            data-aos-duration="3000">
               <img
-                class="small-eclectic-img"
+                class="small-eclectic-img" data-aos="fade-down"
+                data-aos-duration="3000"
                 src="./images/GA-LDN React Template (1).png"
               />
             </div>
-            <div class="green-shape"></div>
-            <div class="first-details">
+            <div class="green-shape" data-aos="fade-left"
+            data-aos-duration="3000"></div>
+            <div class="first-details" data-aos="fade-left"
+            data-aos-duration="3000">
               <div class="first-details-cont">
                 <h2>Eclectic</h2>
                 <p>
@@ -185,18 +201,21 @@
                   list, view trending homeware articles and review particular
                   products too.
                 </p>
-                <button>Live</button>
-                <button>GitHub</button>
+                <button><i class="fab fa-chrome"></i>Live</button>
+                <button><i class="fab fa-github"></i>GitHub</button>
               </div>
             </div>
           </div>
           <div class="second-project">
-            <div class="second-image">
+            <div class="second-image" data-aos="flip-down"
+            data-aos-duration="3000">
               <img src="./images/Aioli.png" alt="image" />
             </div>
-            <div class="orange-shape"></div>
-            <div class="second-details">
-              <div class="second-details-cont">
+            <div class="orange-shape" data-aos="fade-right"
+            data-aos-duration="3000"></div>
+            <div class="second-details" data-aos="fade-right"
+            data-aos-duration="3000" >
+            <div class="second-details-cont" >
                 <h2>Aioli</h2>
                 <p>
                   A Full-Stack MERN application using React, Node.js, Express,
@@ -205,21 +224,25 @@
                   account, post their own recipes, rate and comment on each
                   other's recipes and save particular recipes to their account.
                 </p>
-                <button>Live</button>
-                <button>GitHub</button>
+                <button><i class="fab fa-chrome"></i>Live</button>
+                <button><i class="fab fa-github"></i>GitHub</button>
               </div>
-              <img
+              <img data-aos="flip-down"
+              data-aos-duration="3000"
                 src="./images/Create React App Template - GA PROJECTS (2).png"
                 class="second-project-sm-images"
               />
             </div>
           </div>
           <div class="third-project">
-            <div class="third-image">
+            <div class="third-image" data-aos="flip-up"
+            data-aos-duration="3000">
               <img src="./images/Napster.png" alt="image" />
             </div>
-            <div class="blue-shape"></div>
-            <div class="third-details">
+            <div class="blue-shape" data-aos="fade-left"
+            data-aos-duration="3000"></div>
+            <div class="third-details" data-aos="fade-left"
+            data-aos-duration="3000">
               <div class="third-details-cont">
                 <h2>Napster</h2>
                 <p>
@@ -230,17 +253,20 @@
                   hackathon pair coded project and was my first experience using
                   React and a public API.
                 </p>
-                <button>Live</button>
-                <button>GitHub</button>
+                <button><i class="fab fa-chrome"></i>Live</button>
+                <button><i class="fab fa-github"></i>GitHub</button>
               </div>
             </div>
           </div>
           <div class="fourth-project">
-            <div class="fourth-image">
+            <div class="fourth-image" data-aos="flip-down"
+            data-aos-duration="3000">
               <img src="./images/Poppy.png" alt="image" />
             </div>
-            <div class="pink-shape"></div>
-            <div class="fourth-details">
+            <div class="pink-shape" data-aos="fade-right"
+            data-aos-duration="3000"></div>
+            <div class="fourth-details" data-aos="fade-right"
+            data-aos-duration="3000">
               <div class="fourth-details-cont">
                 <h2>Frogger</h2>
                 <p>
@@ -252,28 +278,33 @@
                   Puppy’, who had to cross a river and other obstacles to get
                   back to her kennel.
                 </p>
-                <button>Live</button>
-                <button>GitHub</button>
+                <a href="https://rosedunlop.github.io/Froggy/"
+                  ><button><i class="fab fa-chrome"></i>Live</button></a
+                >
+                <button><i class="fab fa-github"></i>GitHub</button>
               </div>
             </div>
           </div>
         </div>
       </section>
       <section id="experience-section">
-        <div class="experience-title">
+        <div class="experience-title" data-aos="fade-down"
+        data-aos-duration="3000">
           <h2>Experience</h2>
+          <div class="red-shape-two"></div>
         </div>
         <div class="experience-cont">
-          <div class="first-experience">
+          <div class="first-experience" data-aos="flip-down"
+          data-aos-duration="3000">
             <h4>General Assembly</h4>
             <p>Software Engineering Immersive Course</p>
             <p>September - December 2021</p>
             <ul>
               <li>
-                This was a three month software engineering course learning the
-                key skills required to become a full-stack developer. It
-                consisted of daily lectures, standups, coding labs, pair-coding,
-                homework and four projects listed above.
+                A three month software engineering course learning the key
+                skills required to become a full-stack developer. It consisted
+                of daily lectures, standups, coding labs, pair-coding, homework
+                and four projects listed above.
               </li>
               <li>
                 Learnt the fundamental technologies required to become a
@@ -282,7 +313,8 @@
               </li>
             </ul>
           </div>
-          <div class="second-experience">
+          <div class="second-experience" data-aos="flip-down"
+          data-aos-duration="3000">
             <h4>Brora</h4>
             <p>Sales Assistant</p>
             <p>September 2017 - 2019</p>
@@ -297,7 +329,8 @@
               </li>
             </ul>
           </div>
-          <div class="third-experience">
+          <div class="third-experience" data-aos="flip-down"
+          data-aos-duration="3000">
             <h4>Tattersalls Horse Sales</h4>
             <p>Assistant</p>
             <p>April - December 2017</p>
@@ -311,21 +344,71 @@
             </ul>
           </div>
         </div>
-        <div class="education-title">
-          <h3>Education</h3>
+        <div class="education-container" data-aos="fade-up"
+        data-aos-duration="3000">
+          <div class="education-title">
+            <h3>Education</h3>
+          </div>
+          <div class="education-names">
+            <p>
+              <strong>General Assembly:</strong> Software Engineering Immersive
+              Course, Sept-Dec 2021
+            </p>
+            <p>
+              <strong>Newcastle University:</strong> 2:1 BA (Hons) Politics
+              2018-2021
+            </p>
+            <p>
+              <strong>Code First Girls:</strong> Coding Kick-Starter Course,
+              2020
+            </p>
+          </div>
+          <div class="yellow-shape-two"></div>
         </div>
-        <div>
-          <p>
-            <strong>General Assembly:</strong> Software Engineering Immersive
-            Course, Sept-Dec 2021
-          </p>
-          <p>
-            <strong>Newcastle University:</strong> 2:1 BA (Hons) Politics
-            2018-2021
-          </p>
-          <p>
-            <strong>Code First Girls:</strong> Coding Kick-Starter Course, 2020
-          </p>
+      </section>
+      <section id="about-section">
+        <div class="about-cont" >
+            <h2 data-aos="fade-up" data-aos-duration="3000">About</h2>
+            <img data-aos="flip-up" data-aos-duration="3000"
+              src="./images/IMG_7640.jpeg"
+              width="200"
+              height="200"
+              class="img-circle"
+            />
+            <p data-aos="fade-up" data-aos-duration="3000">
+              My interest in software development began after I graduated from
+              University with a degree in Politics. After graduating, I decided
+              that I did not want to pursue my Political career any further and
+              enrolled in an introductory course in software engineering at Code
+              First Girls. This sparked my fascination for technology and led me
+              to discover my love of problem solving. I then decided to enroll
+              in a Full-Stack Software Engineering Immersive course at General
+              Assembly in order to take my curiosity for coding and turn it into
+              a reality. My experience at GA has not only taught me the
+              necessary skills required to become a Web Developer, but also how
+              important it is to work in a team. I am now looking for
+              opportunities where I can further develop my knowledge as a junior
+              software engineer.
+            </p>
+        </div>
+      </section>
+      <section id="contact-section">
+        <div class="contact-div" data-aos="fade-down"
+        data-aos-duration="3000">
+          <h2>Contact</h2>
+          <div class="contact-container">
+            <div class="icons">
+              <a href="https://github.com/rosedunlop"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/rose-dunlop/"><i class="fab fa-linkedin"></i></a>
+              <i class="fas fa-at"></i>
+            </div>
+            <div class="icon-names">
+              <a href="https://github.com/rosedunlop"><p>GitHub</p></a>
+              <a href="https://www.linkedin.com/in/rose-dunlop/"><p>LinkedIn</p></a>
+              <p>rosedunlop@outlook.com</p>
+            </div>
+            <div class="red-shape-three"></div>
+          </div>
         </div>
       </section>
     </main>
