title page changed

--- a/index.html
+++ b/index.html
@@ -33,35 +33,26 @@
     <main>
       <section id="title-page">
         <div class="title-container">
-          <div class="css-typing">
-            <div class="name-cont">
-              <p class="name">Rose Dunlop</p>
-              <p class="job">Junior Software Engineer</p>
+          <div class="navy-background">
+            <div class="css-typing">
+              <div class="name-cont">
+                <p class="name">Rose Dunlop</p>
+                <p class="job">Junior Software Engineer</p>
+                <div class="red-shape"></div>
+              </div>
             </div>
-            <div class="red-shape"></div>
+            <div class="scroll-container" data-aos="fade-down" data-aos-duration="3000" data-aos-delay="5000" >
+              <div class="scroll">
+                <p>Scroll Down</p>
+                <i class="fas fa-chevron-down"></i>
+              </div>
+            </div>
+            <div class="social" data-aos="fade-down" data-aos-duration="3000" data-aos-delay="5000">
+              <i class="fab fa-linkedin"></i>
+              <i class="fas fa-at"></i>
+              <i class="fab fa-github"></i>
+            </div>
           </div>
-          <div class="social">
-            <div class="social-icons">
-              <a href="https://github.com/rosedunlop"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/rose-dunlop/"><i class="fab fa-linkedin"></i></a>
-              <a href="#contact-section"><i class="fas fa-at"></i></a>
-            </div>
-            <div class="social-links">
-              <a href="https://github.com/rosedunlop">GitHub</a>
-              <a href="https://www.linkedin.com/in/rose-dunlop/">LinkedIn</a>
-              <a href="#contact-section">Contact</a>
-            </div>
-          </div>
-          <div class="blue-background"></div>
-        </div>
-        <div
-          class="scrolling-container"
-          data-aos="fade-down"
-          data-aos-duration="3000"
-          data-aos-delay="5000"
-        >
-          <p>Scroll Down</p>
-          <i class="fas fa-chevron-down"></i>
         </div>
       </section>
       <section id="skills-section">
@@ -156,6 +147,14 @@
               <i class="fab fa-git-alt" id="icon"></i>
               <p>git</p>
             </div>
+            <div class="single-skill">
+              <img src="./images/postman-512.webp" alt="image" width="70" height="70" />
+              <p>Postman</p>
+            </div>
+            <div class="single-skill">
+              <i class="fab fa-yarn" id="icon"></i>
+              <p>Yarn</p>
+            </div>
           </div>
         </div>
         <div class="pink-background"></div>
@@ -201,8 +200,8 @@
                   list, view trending homeware articles and review particular
                   products too.
                 </p>
-                <button><i class="fab fa-chrome"></i>Live</button>
-                <button><i class="fab fa-github"></i>GitHub</button>
+                <a href="https://eclectic-project4.herokuapp.com/"><button><i class="fab fa-chrome"></i>Live</button></a>
+                <a href="https://github.com/rosedunlop/Project-4"><button><i class="fab fa-github"></i>GitHub</button></a>
               </div>
             </div>
           </div>
@@ -224,8 +223,8 @@
                   account, post their own recipes, rate and comment on each
                   other's recipes and save particular recipes to their account.
                 </p>
-                <button><i class="fab fa-chrome"></i>Live</button>
-                <button><i class="fab fa-github"></i>GitHub</button>
+                <a href="https://aioli-app.herokuapp.com/"><button><i class="fab fa-chrome"></i>Live</button></a>
+                <a href="https://github.com/rosedunlop/Project-3"><button><i class="fab fa-github"></i>GitHub</button></a>
               </div>
               <img data-aos="flip-down"
               data-aos-duration="3000"
@@ -254,7 +253,7 @@
                   React and a public API.
                 </p>
                 <button><i class="fab fa-chrome"></i>Live</button>
-                <button><i class="fab fa-github"></i>GitHub</button>
+                <a href="https://github.com/rosedunlop/Project-2"><button><i class="fab fa-github"></i>GitHub</button></a>
               </div>
             </div>
           </div>
@@ -281,7 +280,7 @@
                 <a href="https://rosedunlop.github.io/Froggy/"
                   ><button><i class="fab fa-chrome"></i>Live</button></a
                 >
-                <button><i class="fab fa-github"></i>GitHub</button>
+                <a href="https://github.com/rosedunlop/Froggy"><button><i class="fab fa-github"></i>GitHub</button></a>
               </div>
             </div>
           </div>
