--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
                   Puppy’, who had to cross a river and other obstacles to get
                   back to her kennel.
                 </p>
-                <a href="https://rosedunlop.github.io/Froggy/"
+                <a href="https://rosedunlop.github.io/Project-1/"
                   ><button><i class="fab fa-chrome"></i>Live</button></a
                 >
-                <a href="https://github.com/rosedunlop/Froggy"><button><i class="fab fa-github"></i>GitHub</button></a>
+                <a href="https://github.com/rosedunlop/Project-1"><button><i class="fab fa-github"></i>GitHub</button></a>
               </div>
             </div>
           </div>
